@@ -1,3 +1,7 @@
+2012-07-23  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/cdt/autotools/tests/UpdateConfigureTest.java: New test.
+
 2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* src/org/eclipse/cdt/autotools/tests/ProjectTools.java
